Twitter share button

--- a/TravelPlan/.settings/org.eclipse.wst.common.component
+++ b/TravelPlan/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="TravelPlan">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/lib"/>
         <property name="context-root" value="TravelPlan"/>
         <property name="java-output-path" value="/TravelPlan/build/classes"/>
     </wb-module>
